# gateway-service/handler/api/user_handler.go
@@ -14,18 +14,18 @@ type UserHandler struct {
 }
 
 // This endpoint allows user to register
-// @Summary		 register user
-// @Description	 allows user to register
-// @Tags		 User
-// @ID			register
-// @Accept		 json
-// @Produce		 json
-// @Security	 ApiKeyAuth
-// @Param		 params body user.RegisterParams false "Register-Params"
-// @Success		 200	{object}	ResponseSuccess
-// @Failure		 400	{object}	ResponseFailure
-// @Failure		 500	{object}	ResponseFailure
-// @Router		 /api/v1/auth/register [post]
+//	@Summary		register user
+//	@Description	allows user to register
+//	@Tags			User
+//	@ID				register
+//	@Accept			json
+//	@Produce		json
+//	@Security		ApiKeyAuth
+//	@Param			params	body		user.RegisterParams	false	"Register-Params"
+//	@Success		200		{object}	ResponseSuccess
+//	@Failure		400		{object}	ResponseFailure
+//	@Failure		500		{object}	ResponseFailure
+//	@Router			/api/v1/auth/register [post]
 func (h *UserHandler) Register(c *gin.Context) {
 	params := user.RegisterParams{}
 	err := c.ShouldBindJSON(&params)
@@ -54,18 +54,18 @@ func (h *UserHandler) Register(c *gin.Context) {
 }
 
 // This endpoint allows user to login
-// @Summary		 register user
-// @Description	 allows user to register
-// @Tags		 User
-// @ID			register
-// @Accept		 json
-// @Produce		 json
-// @Security	 ApiKeyAuth
-// @Param		 params body user.RegisterParams false "Register-Params"
-// @Success		 200	{object}	ResponseSuccess
-// @Failure		 400	{object}	ResponseFailure
-// @Failure		 500	{object}	ResponseFailure
-// @Router		 /api/v1/auth/login [post]
+//	@Summary		login user
+//	@Description	allows user to login
+//	@Tags			User
+//	@ID				login
+//	@Accept			json
+//	@Produce		json
+//	@Security		ApiKeyAuth
+//	@Param			params	body		user.RegisterParams	false	"Register-Params"
+//	@Success		200		{object}	ResponseSuccess
+//	@Failure		400		{object}	ResponseFailure
+//	@Failure		500		{object}	ResponseFailure
+//	@Router			/api/v1/auth/login [post]
 func (h *UserHandler) Login(c *gin.Context) {
 	params := user.LoginParams{}
 	err := c.ShouldBindJSON(&params)
